Add new returnTVs property to include TV values in the snippet output. 

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.2-pl2        ++
++         Released: 10/11/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
(pl2) Fix bug which would include all resources if no resource fields are used in the &fields property.
Fix bug which didn't filter out the current resource properly by refactoring the query.
Make sure the debug data being spit out is actually usable and not just one blurb of data.
Make sure tags are checked in a case insensitive manner to improve dataset. Fixes lack of results on some configurations.
Fix bug that ignores ignoreHidden and ignoreUnpublished setting

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.1-pl2        ++
++         Released: 27/10/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++
Fix bug where tpl files are chosen over actual chunks.
Fix bug with &parents and TVs in the &fields property.
Add custom sort function to class for cleanliness

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 1.0.0-pl         ++
++         Released: 13/10/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++

Fix bug on some configurations with the callback function being inline.
Add anchor tags to the default chunk.
Disable debug mode being enabled by default.

++++++++++++++++++++++++++++++++++++
++                                ++
++    getRelated 0.9.1-dev        ++
++         Released: 9/10/2011   ++
++                                ++
++++++++++++++++++++++++++++++++++++

(Private Release)
Add context & parent support.
Internationalization and property descriptions.
Add properties to decide on the sample size to increase accuracy / decrease loading times.