@@ -1,3 +1,4 @@
+Add new exclude property to exclude specific resources from the output.
 Add new returnTVs property to include TV values in the snippet output. 
 
 ++++++++++++++++++++++++++++++++++++
